@@ -52,6 +52,7 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Added recognition for another Yahoo bounce format.  LP: #1157961
     - Changed configure's method for getting Python's include directory from
       distutils.sysconfig.get_config_var('CONFINCLUDEPY') to
       distutils.sysconfig.get_python_inc().  (LP: 1098162)
